--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Release-Based Sprint Burn Down",
+    "name": "Program Burn Up",
     "className": "CustomApp",
     "server": "https://rally1.rallydev.com",
     "sdk": "2.0p5",
